Refactoring and bug fixing