@@ -212,6 +212,15 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>3.1.0</version>
+                <!--
+                <configuration>
+                    <archive>
+                        <manifestEntries>
+                            <Add-Opens>java.base/java.lang.invoke</Add-Opens>
+                        </manifestEntries>
+                    </archive>
+                </configuration>
+                -->
             </plugin>
 
             <plugin>
